# pptxcli

./: .env.example  .gitignore  CLAUDE.md  Claude現状レポート_2024.md  LICENSE  README.ja.md  README.md  animations.md  build_ai_2026.py  generate-claude-report.js  generate_ai_2026.py  generate_ai_trends.py  generate_cli_spec.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/cli-builder/: SKILL.md
.claude/skills/cli-builder-workspace/: cli-builder.skill  trigger-eval.json
.claude/skills/cli-builder-workspace/description-optimization/: report.html
.claude/skills/cli-builder-workspace/iteration-1/: benchmark.json  grade_all.py  grading_summary.json  review.html  test_review.mjs  test_review.py
.claude/skills/cli-builder-workspace/iteration-1/eval-0-nodejs-csv-converter/: eval_metadata.json
.claude/skills/cli-builder-workspace/iteration-1/eval-0-nodejs-csv-converter/with_skill/: grading.json  timing.json
.claude/skills/cli-builder-workspace/iteration-1/eval-0-nodejs-csv-converter/without_skill/: grading.json  timing.json
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/: eval_metadata.json
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/with_skill/outputs/: pyproject.toml
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/with_skill/outputs/src/projinit/: __init__.py  cli.py
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/with_skill/outputs/src/projinit/commands/: __init__.py  init.py  templates.py
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/with_skill/outputs/src/projinit/lib/: __init__.py  core.py  errors.py
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/with_skill/outputs/src/projinit/ui/: __init__.py  banner.py  progress.py  theme.py
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/with_skill/outputs/tests/: conftest.py  test_cli.py  test_core.py
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/without_skill/outputs/projinit/: LICENSE  README.md  pyproject.toml
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/without_skill/outputs/projinit/src/projinit/: __init__.py  banner.py  cli.py  prompts.py  scaffold.py
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/without_skill/outputs/projinit/src/projinit/templates/: __init__.py  registry.py
.claude/skills/cli-builder-workspace/iteration-1/eval-1-python-project-setup/without_skill/outputs/projinit/tests/: test_banner.py  test_cli.py  test_prompts.py  test_scaffold.py  test_templates.py
.claude/skills/cli-builder-workspace/iteration-1/eval-2-task-manager/: eval_metadata.json
.claude/skills/cli-builder-workspace/iteration-2/: benchmark.json  grade_all.py  grading_summary.json  review.html  test_review.py
.claude/skills/cli-builder-workspace/iteration-2/eval-0-nodejs-csv-converter/: eval_metadata.json
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/: eval_metadata.json
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/with_skill/outputs/: pyproject.toml
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/with_skill/outputs/src/projinit/: __init__.py  __main__.py  cli.py
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/with_skill/outputs/src/projinit/commands/: __init__.py  init_project.py
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/with_skill/outputs/src/projinit/lib/: __init__.py  errors.py  scaffold.py  templates.py
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/with_skill/outputs/src/projinit/ui/: __init__.py  banner.py  progress.py  theme.py
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/with_skill/outputs/tests/: conftest.py  test_cli.py  test_scaffold.py  test_templates.py
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/without_skill/outputs/: pyproject.toml
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/without_skill/outputs/src/projinit/: __init__.py  banner.py  cli.py  prompts.py  scaffold.py  templates.py
.claude/skills/cli-builder-workspace/iteration-2/eval-1-python-project-setup/without_skill/outputs/tests/: test_banner.py  test_cli.py  test_prompts.py  test_scaffold.py  test_templates.py
.claude/skills/cli-builder-workspace/iteration-2/eval-2-task-manager/: eval_metadata.json
.claude/skills/cli-builder/evals/: evals.json
.claude/skills/cli-builder/references/: nodejs-cli.md  python-cli.md
.claude/skills/cli-builder/scripts/: generate_banner.py
cli/: __init__.py  __main__.py  agent.py  app.py  config.py
cli/tools/: __init__.py  base.py  command_tool.py  file_tools.py  pptx_tool.py
cli/ui/: console.py  input.py
pptxv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: add_transitions.py  add_transitions_inplace.py
(+100 files in other folders)
