[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "projinit"
version = "1.0.0"
description = "Interactive CLI tool for scaffolding new projects with style"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "projinit", email = "projinit@example.com" },
]
keywords = ["cli", "project", "scaffold", "template", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "rich>=13.0.0",
    "click>=8.1.0",
    "questionary>=2.0.0",
]

[project.scripts]
projinit = "projinit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/projinit"]

[tool.hatch.build.targets.sdist]
include = ["src/projinit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/projinit"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
